[package]
authors = [
  "Andreas Lindhé",
]
categories = [
  "web-programming::http-server",
]
description = "A web app that serves emojis and other icons as favicons."
edition = "2021"
exclude = [
  "/.*",
]
keywords = [
  "emoji",
  "favicon",
  "http",
  "icons",
  "material-design-icons",
  "mdi",
  "server",
  "web",
]
license = "LGPL-3.0-or-later"
name = "webicons"
repository = "https://github.com/lindhe/webicons/"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
emojis = "0.6.0"
html = "0.5.2"
rocket = "=0.5.0-rc.3"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
unic-emoji-char = "0.9.0"
